objects/ccrz__E_SubProdTerm__c.object
<CustomObject>
    <description>B2B Commerce product subscription definition.</description>
    <fields>
        <fullName>ccrz__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a subscription should auto-renew after it ends.</description>
        <inlineHelpText>Check to have the subscription auto-renew.</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__CCProduct__c</fullName>
        <description>For recurring Order subscriptions this is the product that will be ordered.</description>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC SubProdTerms</relationshipLabel>
        <relationshipName>SubProdTerms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ccrz__CCSubProdTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent subscription for which this is a modifier.  For top level subscription data this field should be null.  Allows for adding Modifier CC Sub Prod Terms to a main CC SubProdTerm.</description>
        <inlineHelpText>For modifier terms, specify the CC Sub Prod Term this is modifying</inlineHelpText>
        <label>CC SubProdTerm</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC SubProdTerms</relationshipLabel>
        <relationshipName>CCSubProdTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CartDisplayNameRT__c</fullName>
        <description>Rich Text Version of the Cart Display Name. Content in this field will override the content in the standard field.</description>
        <label>Cart Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__CartDisplayName__c</fullName>
        <description>Text used for Displaying subscription information in the Cart and during Checkout.  If this field is blank then Product Detail Display Name is used.</description>
        <label>Cart Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayNameRT__c</fullName>
        <description>Rich Text enabled version of Display Name. If text is included here will override the standard Display Name Field.</description>
        <label>Display Name RT</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>The name of this subscription.  Used as a parameter for other Display Name fields.</description>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveEnd__c</fullName>
        <description>The last DateTime that this subscription will be available.</description>
        <label>Effective End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveStart__c</fullName>
        <description>The first DateTime that this subscription will be available.</description>
        <label>Effective Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__EmailDisplayNameRT__c</fullName>
        <description>Rich Text Version of the Email Display Name. Content in this field will override the content in the standard field.</description>
        <label>Email Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__EmailDisplayName__c</fullName>
        <description>Text used for Displaying subscription information in the order confirmation email. If this field is blank then will try to fall Back to Order Display Name followed by Cart Display Name followed by Product Detail Display Name.</description>
        <label>Email Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set to true if this subscription is enabled.  False otherwise.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__IgnoreInstallmentFrequencyFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Installment Frequency and Installment Frequency UOM fields are ignored an instead the Order Frequency and Order Frequency UOM fields are used for both Orders and Installments</description>
        <inlineHelpText>Check to have Order frequency determine Installment frequency.</inlineHelpText>
        <label>Ignore Installment Frequency Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentCount__c</fullName>
        <description>Number of installments/payments billed for this subscription.</description>
        <inlineHelpText>Number of installments/payments billed for this subscription.</inlineHelpText>
        <label>Installment Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentFrequencyUOM__c</fullName>
        <description>Unit of Measure for Installment Frequency.  Possible values are Daily, Weekly, Monthly, Yearly. Capitalization is taken into account.</description>
        <inlineHelpText>Unit of Measure for Installment Frequency. Possible values are Daily, Weekly, Monthly, Yearly. Capitalization is taken into account.</inlineHelpText>
        <label>Installment Frequency UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__InstallmentFrequency__c</fullName>
        <description>Frequency of Installment/Billing when combined with the Unit of Measure</description>
        <inlineHelpText>Frequency of Installment/Billing when combined with the Unit of Measure</inlineHelpText>
        <label>Installment Frequency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Name__c</fullName>
        <description>CCSPT-{00000000}</description>
        <displayFormat>CCSPT-{00000000}</displayFormat>
        <inlineHelpText>Auto-generated unique name.</inlineHelpText>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderCount__c</fullName>
        <description>Number of orders to place/ship as part of this subscription</description>
        <inlineHelpText>Number of orders to place/ship as part of this subscription</inlineHelpText>
        <label>Order Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderDisplayNameRT__c</fullName>
        <description>Rich Text Version of the Order Display Name. Content in this field will override the content in the standard field.</description>
        <label>Order Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderDisplayName__c</fullName>
        <description>Text used for Displaying subscription information in the order.  If this field is blank then Product Detail Display Name is used.</description>
        <label>Order Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderFrequencyUOM__c</fullName>
        <description>Unit of Measure for the Frequency of Order component of a Subscription.  Possible values are Daily, Weekly, Monthly, Yearly. Capitalization is taken into account.</description>
        <inlineHelpText>Unit of Measure for Order Frequency. Possible values are Daily, Weekly, Monthly, Yearly. Capitalization is taken into account.</inlineHelpText>
        <label>Order Frequency UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__OrderFrequency__c</fullName>
        <description>The frequency of the order component of a Subscription</description>
        <inlineHelpText>Used in conjunction with UOM, order frequency is how often the service/product is performed/sent. Must be a whole number.</inlineHelpText>
        <label>Order Frequency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductDetailDisplayNameRT__c</fullName>
        <description>Rich Text Version of the Product Detail Display Field. Content in this field will override the content in the standard field.</description>
        <label>Product Detail Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductDetailDisplayName__c</fullName>
        <description>Text used for Displaying subscription information on the product detail page.</description>
        <label>Product Detail Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductListDisplayNameRT__c</fullName>
        <description>For future use.  Do not use.</description>
        <label>Product List Display Name RT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductListDisplayName__c</fullName>
        <description>For future use.  Do not use.</description>
        <label>Product List Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPricePercentage__c</fullName>
        <description>Used to calculate the recurring price of a Kit/Dynamic kit only. Does not apply to subscriptions that are on other product types.</description>
        <label>Recurring Price Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Determines the order the subscription options appear in the the store. They appear in sequence order Low to High.</description>
        <inlineHelpText>Determines the order the subscription options appear in the the store. They appear in sequence order Low to High.</inlineHelpText>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront to which this subscription is available.</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubProdTermId__c</fullName>
        <description>External ID For SubProdTerms.  This id is not used by B2B Commerce.</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID for use with integrations.</inlineHelpText>
        <label>SubProdTerm Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__UpfrontPricePercentage__c</fullName>
        <description>Used to calculate upfront price of a Kit/Dynamic kit only. Is not used by subscriptions on any other product types.</description>
        <label>Upfront Price Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>CC SubProdTerm</label>
    <nameField>
        <label>CC SubProdTerm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC SubProdTerms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>